--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,5 @@
+<html style="background-color: rgb(42, 165, 120);"></html>
+
 <h3>MY CONTACT DETAILS :</h3>
 address : xyz 343/567<br />
 7533967788<br />
