--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<html style="background-color: rgb(42, 165, 120);"></html>
+<html style="background-color: bisque;"></html>
 
 <head>
     <meta charset="UTF-8">
