--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html style="background-color: rgb(42, 165, 120);"></html>
 
 <h3>MY CONTACT DETAILS :</h3>
-address : xyz 343/567<br />
-7533967788<br />
+address : Ganga Nagar, MEERUT<br />
+7533968807<br />
 sidhantdeshwal42@gmail.com
 <hr />
