--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<html style="background-color: rgb(42, 165, 120);"></html>
+<html style="background-color:  bisque;"></html>
 
 <h3>MY CONTACT DETAILS :</h3>
 address : Ganga Nagar, MEERUT<br />
