--- a/hobbies.html
+++ b/hobbies.html
@@ -1,9 +1,9 @@
-<html style="background-color: rgb(42, 165, 120);"></html>
+<html style="background-color:  bisque;"></html>
 
 <h3> MY HOBBIES:</h3>
 <UL>
-    <li>gym</li>
-    <li>football: i have player under 19 nationals in football in 2017</li>
-    <li>music</li>
+    <li>Gym</li>
+    <li>Football: i have player under 19 nationals in football in 2017</li>
+    <li>Listning music</li>
     <hr />
 </UL>
